<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity" android:background="@mipmap/background"
    >

    <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textPassword"-->
        <!--android:text="UserName"-->
        <!--android:ems="10"-->
        <!--android:id="@+id/PassWordArea"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:background="#000000"-->
        <!--android:layout_marginBottom="106dp" />-->
    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/welcome"
        />-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:background="#FF9B7D59"
        android:ems="10"
        android:layout_centerInParent="true"
        android:hint="@string/username"
        android:id="@+id/UserNameArea"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/PasswordArea"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true" />
    <EditText
        style="@style/TextStyle"
        android:layout_marginBottom="30dp"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:id="@+id/PasswordArea"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/LoginBtn"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_above="@+id/VistorLoginBtn"
        style="@style/ButtonStyle1"
        android:id="@+id/LoginBtn"
        android:text="@string/login"

        />
    <Button
        android:layout_marginBottom="50dp"
        style="@style/ButtonStyle1"
        android:id="@+id/VistorLoginBtn"
        android:text="@string/visitor_login"
        android:layout_above="@+id/RegisterBtn"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/ForgetBtn"
        android:text="@string/forget_password"
        android:textColor="#FF371B03"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/RegisterBtn"
        android:text="@string/register"
        android:textColor="#FF371B03"
        android:textSize="18sp"/>



</RelativeLayout>
